third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/concat-display.stderr
error: expected one of: string literal, `transparent`, `fmt`
  --> tests/ui/concat-display.rs:8:17
   |
 8 |         #[error(concat!("invalid ", $what))]
   |                 ^^^^^^
...
13 | error_type!(Error, "foo");
   | ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `error_type` (in Nightly builds, run with -Z macro-backtrace for more info)
